force-app/main/default/objects/Daily_Progress__c/Daily_Progress__c.object-meta.xml
<CustomObject>
    <description>Daily work log entries for tracking task progress and developer activity</description>
    <label>Daily Progress</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Progress Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>