force-app/main/default/objects/Daily_Progress__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developer who logged this progress</description>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>