force-app/main/default/objects/Daily_Progress__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <description>Number of hours worked on this day</description>
    <label>Hours Worked</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>