force-app/main/default/objects/Daily_Progress__c/fields/Progress_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of progress entry</description>
    <label>Progress Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>