force-app/main/default/objects/Daily_Progress__c/fields/Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percentage__c</fullName>
    <description>Progress percentage for this entry</description>
    <label>Progress %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>