force-app/main/default/objects/Daily_Progress__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>Task this progress entry belongs to</description>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Daily Progress</relationshipLabel>
    <relationshipName>Daily_Progress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>