force-app/main/default/objects/Daily_Progress__c/validationRules/Cannot_Edit_Historical_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Historical_Progress</fullName>
    <active>true</active>
    <description>Prevents developers from editing progress entries older than 2 days</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    Progress_Date__c &lt; TODAY() - 2,
    NOT($Permission.Edit_Historical_Progress)
)</errorConditionFormula>
    <errorMessage>You cannot edit progress entries older than 2 days. Please contact your team lead if corrections are needed.</errorMessage>
</ValidationRule>