force-app/main/default/objects/Daily_Progress__c/validationRules/Hours_Worked_Must_Be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Worked_Must_Be_Valid</fullName>
    <active>true</active>
    <description>Ensures hours worked is between 0 and 24</description>
    <errorConditionFormula>OR(
    Hours_Worked__c &lt; 0,
    Hours_Worked__c &gt; 24
)</errorConditionFormula>
    <errorDisplayField>Hours_Worked__c</errorDisplayField>
    <errorMessage>Hours worked must be between 0 and 24 hours per day.</errorMessage>
</ValidationRule>