force-app/main/default/objects/Daily_Progress__c/validationRules/Progress_Percentage_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Progress_Percentage_Range</fullName>
    <active>true</active>
    <description>Ensures progress percentage is between 0 and 100</description>
    <errorConditionFormula>OR(
    Progress_Percentage__c &lt; 0,
    Progress_Percentage__c &gt; 100
)</errorConditionFormula>
    <errorDisplayField>Progress_Percentage__c</errorDisplayField>
    <errorMessage>Progress percentage must be between 0 and 100%.</errorMessage>
</ValidationRule>